Switch to CIE76 (Delta E 1976) color matching algorithm
- Changed from Delta E 2000 to CIE76 for simpler LAB distance calculation
- Updated app.js to use deltaE76 instead of deltaE2000
- Updated all documentation (README, HTML meta, footer)
- Modified test scripts to use CIE76
- Simple Euclidean distance in LAB space: sqrt((L2-L1)² + (a2-a1)² + (b2-b1)²)

Note: CIE76 may provide different results than Delta E 2000 but uses
a simpler algorithm that may better match certain color matching systems.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hex to Pantone Converter | Professional Color Matching</title>
-    <meta name="description" content="Convert hex colors to their nearest Pantone Solid Coated matches using Delta E 2000 color difference algorithm">
+    <meta name="description" content="Convert hex colors to their nearest Pantone Solid Coated matches using CIE76 color difference algorithm in LAB space">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -59,7 +59,7 @@
                 <div class="features">
                     <div class="feature">
                         <span class="icon">🎯</span>
-                        <span>Delta E 2000 accuracy</span>
+                        <span>CIE76 LAB matching</span>
                     </div>
                     <div class="feature">
                         <span class="icon">📊</span>
@@ -76,8 +76,8 @@
         <!-- Footer -->
         <footer class="footer">
             <p>
-                Built with Delta E 2000 color matching algorithm
-                | <a href="https://github.com" target="_blank">View on GitHub</a>
+                Built with CIE76 (Delta E 1976) color matching algorithm
+                | <a href="https://github.com/joeldsimmons/evg-pantone-color-picker" target="_blank">View on GitHub</a>
             </p>
             <p class="disclaimer">
                 For professional use only. Color accuracy may vary based on display calibration.
